fixed the How I work section

--- a/index.html
+++ b/index.html
@@ -69,15 +69,23 @@
         <!-- Work Section -->
         <section id="work" class="work-section">
             <div class="container">
-                <h2 class="display-4 text-center mb-5" style="font-family: 'Times New Roman', Times, serif;">Experience</h2>
+                <h2 class="display-4 text-center mb-5" style="font-family: 'Times New Roman', Times, serif;">How I Work</h2>
                 <div class="work-grid">
                     <div class="work-item">
-                        <h4 style="font-family: 'Comic Sans MS', cursive;">Portfolio Website (SEG 3125)</h4>
-                        <p style="font-family: 'Comic Sans MS', cursive;">Creating beautiful and functional user interfaces to enhance my skills in web development.</p>
+                        <h4 style="font-family: 'Comic Sans MS', cursive;">Planning</h4>
+                        <p style="font-family: 'Comic Sans MS', cursive;">First, I sit down and figure out what you want your website to do. I ask lots of questions and make sure I understand exactly what you're looking for!</p>
                     </div>
                     <div class="work-item">
-                        <h4 style="font-family: 'Comic Sans MS', cursive;">PrivaC (SEG 2900)</h4>
-                        <p style="font-family: 'Comic Sans MS', cursive;">Built a website for my product, using html, css, and javascript.</p>
+                        <h4 style="font-family: 'Comic Sans MS', cursive;">Design</h4>
+                        <p style="font-family: 'Comic Sans MS', cursive;">Then I sketch out how your website should look. I make sure it's super cool and easy to use, with awesome colors and pictures!</p>
+                    </div>
+                    <div class="work-item">
+                        <h4 style="font-family: 'Comic Sans MS', cursive;">Development</h4>
+                        <p style="font-family: 'Comic Sans MS', cursive;">This is where I code everything using HTML, CSS, and JavaScript. I learned these in my computer science class, and they're super fun to work with!</p>
+                    </div>
+                    <div class="work-item">
+                        <h4 style="font-family: 'Comic Sans MS', cursive;">Launch</h4>
+                        <p style="font-family: 'Comic Sans MS', cursive;">Finally, I test everything to make sure it works perfectly, and then put your website online for everyone to see. It's like showing off your cool project in class!</p>
                     </div>
                 </div>
             </div>
