--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2 class="display-1 fw-bold text-center mb-5" style="font-family: 'Times New Roman', Times, serif;">Projects</h2>
             <div class="row g-4">
                 <div class="col-md-6">
-                    <a href="service-site.html" class="text-decoration-none">
+                    <a href="https://alexanderlungu-awsfalah-servicesite.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image service-site">
                                 <img src="images/service-site.jpg" class="card-img-top" alt="Service Site Preview">
