--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="small-game.html" class="text-decoration-none">
+                    <a href="https://aagamememory.netlify.app" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image small-game">
                                 <img src="images/small-game.jpg" class="card-img-top" alt="Small Game Preview">
