--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="ecommerce.html" class="text-decoration-none">
+                    <a href="https://aa-ecommerce-site.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image ecommerce">
                                 <img src="images/ecommerce.jpg" class="card-img-top" alt="E-Commerce Site Preview">
