--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="analytics.html" class="text-decoration-none">
+                    <a href="https://aaanalysiswebsite.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image analytics">
                                 <img src="images/analytics.jpg" class="card-img-top" alt="Analytics Site Preview">
