changes pictures for holding

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a href="https://alexanderlungu-awsfalah-servicesite.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image service-site">
-                                <img src="images/service-site.jpg" class="card-img-top" alt="Service Site Preview">
+                                <img src="images/ServiceSite.png" class="card-img-top" alt="Service Site Preview">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title text-warning" style="font-family: 'Comic Sans MS', cursive;">Service Site</h3>
@@ -111,7 +111,7 @@
                     <a href="https://aagamememory.netlify.app" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image small-game">
-                                <img src="images/small-game.jpg" class="card-img-top" alt="Small Game Preview">
+                                <img src="images/Game.png" class="card-img-top" alt="Small Game Preview">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title text-warning" style="font-family: 'Comic Sans MS', cursive;">Small Game</h3>
@@ -123,7 +123,7 @@
                     <a href="https://aa-ecommerce-site.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image ecommerce">
-                                <img src="images/ecommerce.jpg" class="card-img-top" alt="E-Commerce Site Preview">
+                                <img src="images/Tech.png" class="card-img-top" alt="E-Commerce Site Preview">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title text-warning" style="font-family: 'Comic Sans MS', cursive;">E-Commerce Site</h3>
@@ -135,7 +135,7 @@
                     <a href="https://aaanalysiswebsite.netlify.app/" class="text-decoration-none">
                         <div class="card bg-dark border-0 h-100 project-box">
                             <div class="project-image analytics">
-                                <img src="images/analytics.jpg" class="card-img-top" alt="Analytics Site Preview">
+                                <img src="images/Ana.png" class="card-img-top" alt="Analytics Site Preview">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title text-warning" style="font-family: 'Comic Sans MS', cursive;">Analytics Site</h3>
